use netbsd-current for testing PVH and live-migration

--- a/netbsd.conf
+++ b/netbsd.conf
@@ -1,6 +1,11 @@
 
 # RELEASE
-repo=/data/kernels/netbsd92
-name=netbsd92
-tpl=/data/templates/netbsd92.ffs
+#repo=/data/kernels/netbsd92
+#name=netbsd92
+#tpl=/data/templates/netbsd92.ffs
+
+# CURRENT
+repo=/data/kernels/netbsd-current
+name=netbsd-current
+tpl=/data/templates/netbsd-current.ffs
 
